# pokeInvestor

./: .env.example  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json
docs/: youtube-pipeline.md
drizzle/: 0000_init.sql  0001_oval_lila_cheney.sql  0002_needy_silver_centurion.sql  0003_count_based_backfill.sql  0004_backfill_mode.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
pipeline/: .dockerignore  Dockerfile  README.md  pyproject.toml
pipeline/deploy/argo/: README.md  cronworkflow-backfill.yaml  cronworkflow-discover.yaml  cronworkflow-insights.yaml  cronworkflow-transcripts.yaml  secret.example.yaml  workflowtemplate.yaml
pipeline/src/poke_pipeline/: __init__.py  __main__.py  backfill.py  cli.py  config.py  db.py  discover.py  extract.py  llm_io.py  matching.py  prompts.py  sources.py  transcripts.py  whisper_transcribe.py
pipeline/tests/: test_config.py  test_prompts.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: AutoTagSection.tsx  BulkStatusSection.tsx  SyncSchemaSection.tsx  WipeSection.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/history/: HistoryTable.tsx  page.tsx
src/components/: CashflowChart.tsx  CashflowTagFilter.tsx  CurrencyPicker.tsx  Histogram.tsx  Money.tsx  Nav.tsx  TagBadge.tsx  ui.tsx
src/db/: client.ts  migrate.ts  schema.ts  seed.ts
src/lib/: csv.ts  currency.test.ts  currency.ts  fx.ts  import.test.ts  import.ts  pricecharting.ts  signals-shared.ts  youtube-constants.ts
(+58 files in other folders)
